# GhostQL-A-Custom-CLI-Database-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: QLParser.h  QLParser.hpp  cli-for-users.h  columnMeta.hpp  database.h  database.hpp  helper.hpp  processCommand.h  processCommand.hpp  session.hpp
src/: QLParser.cpp  database.cpp  helper.cpp  processCommand.cpp
